# fzuhelper-bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  appsettings.json  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker-image.yml  test-docker-compose.yml
docker/: .env.example  Dockerfile  appsettings.example.jsonc  docker-compose.yml
docker/data/: appsettings.json
src/: __init__.py
src/plugins/disconnect_notice/: __init__.py  commands.py  config.py  email.py  feishu.py  notice_event.py
src/plugins/disconnect_notice/models/: __init__.py  bot_offline_notice.py
src/plugins/github/: __init__.py  changelog.py  commands.py  config.py  github_proxy.py  middleware.py  utils.py  webhook.py
src/plugins/github/handlers/: ping.py  release.py
src/plugins/github/models/: __init__.py  asset.py  release.py  repository.py
