[project]
name = "fzuhelper-bot"
version = "0.1.0"
description = "fzuhelper-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.3",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
