[project]
name = "fzuhelper-bot"
version = "0.1.1"
description = "fzuhelper-bot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosmtplib>=5.1.0",
    "nb-cli>=1.7.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.4",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []
